package br.com.coleta_inteligente.controller.admin;
import java.util.List;

import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.DeleteMapping;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.PathVariable;
import org.springframework.web.bind.annotation.PostMapping;
import org.springframework.web.bind.annotation.PutMapping;
import org.springframework.web.bind.annotation.RequestBody;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

import br.com.coleta_inteligente.model.TipoResiduo;
import br.com.coleta_inteligente.service.LocalDescarteTipoResiduoService;
import br.com.coleta_inteligente.service.TipoResiduoService;

@RestController
@RequestMapping("/api/admin/tipos-residuo")
public class TipoResiduoController {

    private final TipoResiduoService service;
    private final LocalDescarteTipoResiduoService vinculoService;

    public TipoResiduoController(TipoResiduoService service, LocalDescarteTipoResiduoService vinculoService) {
        this.service = service;
        this.vinculoService = vinculoService;
    }

    @PostMapping
    public TipoResiduo criar(@RequestBody TipoResiduo tipo) {
        return service.criar(tipo);
    }

    @GetMapping
    public List<TipoResiduo> listar() {
        return service.listar();
    }

    @GetMapping("/{id}")
    public ResponseEntity<TipoResiduo> buscar(@PathVariable Long id) {
        return service.buscarPorId(id).map(ResponseEntity::ok).orElse(ResponseEntity.notFound().build());
    }

    @PutMapping("/{id}")
    public TipoResiduo atualizar(@PathVariable Long id, @RequestBody TipoResiduo tipo) {
        return service.atualizar(id, tipo);
    }

    @DeleteMapping("/{id}")
    public ResponseEntity<?> deletar(@PathVariable Long id) {
        if (!vinculoService.listar().isEmpty()) {
            return ResponseEntity.status(HttpStatus.CONFLICT).body("Não é possível excluir. Existem vínculos associados.");
        }
        service.deletar(id);
        return ResponseEntity.noContent().build();
    }
}