package br.com.coleta_inteligente.model;

public enum Perfil {
    ADMIN,
    OPERADOR
}
