package br.com.coleta_inteligente.repository;

import java.util.List;
import java.util.Optional;

import org.springframework.data.jpa.repository.JpaRepository;
import org.springframework.stereotype.Repository;

import br.com.coleta_inteligente.model.Usuario;

@Repository
public interface UsuarioRepository extends JpaRepository<Usuario, Long>{

    Optional<Usuario> findByNome(String nome);
    Optional<Usuario> findByEmail(String email);
    List<Usuario> findByAtivoTrue();
    
}
